--- a/medium-clone/package.json
+++ b/medium-clone/package.json
@@ -28,5 +28,6 @@
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
-  }
+  },
+  "export": "next export"
 }
